[gd_scene load_steps=28 format=3 uid="uid://bqugtj6bcbrux"]

[ext_resource type="Texture2D" uid="uid://bfksxs1a7c2qr" path="res://Assets/Character/survivalgame-enemy-slime.png" id="1_07khd"]
[ext_resource type="Script" path="res://scripts/slime.gd" id="1_o7h43"]
[ext_resource type="Resource" uid="uid://dqrhci4vp0uul" path="res://Inventory/Items/slime_resource.tres" id="2_lrsw5"]
[ext_resource type="PackedScene" uid="uid://4cdht7b43r0p" path="res://Scenes/slime_collectible.tscn" id="3_vh6rl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q6bsh"]
atlas = ExtResource("1_07khd")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttacm"]
atlas = ExtResource("1_07khd")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx6i4"]
atlas = ExtResource("1_07khd")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_djia2"]
atlas = ExtResource("1_07khd")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntrbo"]
atlas = ExtResource("1_07khd")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_23cap"]
atlas = ExtResource("1_07khd")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnynw"]
atlas = ExtResource("1_07khd")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pd52m"]
atlas = ExtResource("1_07khd")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpnib"]
atlas = ExtResource("1_07khd")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mla86"]
atlas = ExtResource("1_07khd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_41bxs"]
atlas = ExtResource("1_07khd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufwig"]
atlas = ExtResource("1_07khd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_meg0g"]
atlas = ExtResource("1_07khd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pq7e0"]
atlas = ExtResource("1_07khd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_00c3e"]
atlas = ExtResource("1_07khd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sl1re"]
atlas = ExtResource("1_07khd")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftv45"]
atlas = ExtResource("1_07khd")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh12n"]
atlas = ExtResource("1_07khd")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_q4mwi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6bsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttacm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx6i4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djia2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntrbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23cap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnynw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pd52m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpnib")
}],
"loop": true,
"name": &"death",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mla86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41bxs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufwig")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_meg0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pq7e0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00c3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sl1re")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftv45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh12n")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qayfd"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_d0sid"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3bbvd"]
radius = 612.687

[sub_resource type="CircleShape2D" id="CircleShape2D_41i1c"]
radius = 1631.01

[node name="slime" type="CharacterBody2D"]
script = ExtResource("1_o7h43")
itemRes = ExtResource("2_lrsw5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_q4mwi")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_qayfd")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_d0sid")

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_3bbvd")

[node name="slime_collectible" parent="." instance=ExtResource("3_vh6rl")]
visible = false

[node name="area_init_player" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_init_player"]
shape = SubResource("CircleShape2D_41i1c")

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="area_init_player" to="." method="_on_area_init_player_body_entered"]
